--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,14 @@ version: '3.7'
 services:
   backend:
     build: ./backend
+    container_name: backend
     command: uvicorn main:app --reload --workers 2 --host 0.0.0.0 --port 8000
     ports:
       - 8000:8000
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - 3000:80
+    links:
+      - backend
