--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     container_name: app
     command: bash -c "cd backend && uvicorn main:app --workers 4 --host 0.0.0.0 --port $PORT"
     ports:
-      - $PORT
+      - "$PORT:$PORT"
